refactor: 바뀐 구조에 맞춰 테스트 코드를 수정함